--- a/assets/css/framework.css
+++ b/assets/css/framework.css
@@ -139,10 +139,6 @@ h6,
   .grid__col1:last-child {
     margin-right: 0; }
 
-.grid__offset-by-1 {
-  margin-left: 8.333%;
-  margin-right: 10px; }
-
 .grid__col2 {
   position: relative;
   width: 16.666%;
@@ -153,10 +149,6 @@ h6,
     margin-left: 0; }
   .grid__col2:last-child {
     margin-right: 0; }
-
-.grid__offset-by-2 {
-  margin-left: 16.666%;
-  margin-right: 10px; }
 
 .grid__col3 {
   position: relative;
@@ -214,9 +206,7 @@ h6,
   .grid__col6:last-child {
     margin-right: 0; }
 
-.grid__offset-by-6 {
-  margin-left: 49.998%;
-  margin-right: 10px; }
+
 
 .grid__col7 {
   position: relative;
@@ -304,9 +294,62 @@ h6,
   .grid__col12:last-child {
     margin-right: 0; }
 
+.grid__offset-by-1 {
+  margin-left: 8.333% !important;
+  margin-right: 10px; 
+}
+.grid__offset-by-2 {
+  margin-left: 16.666% !important;
+  margin-right: 10px; 
+}
+
+.grid__offset-by-3 {
+  margin-left: 24.999% !important;
+  margin-right: 10px; 
+}
+.grid__offset-by-4 {
+  margin-left: 33.332% !important;
+  margin-right: 10px; 
+}
+.grid__offset-by-5 {
+  margin-left: 41.665% !important;
+  margin-right: 10px; 
+}
+
+.grid__offset-by-6 {
+  margin-left: 49.998% !important;
+  margin-right: 10px; 
+}
+
+.grid__offset-by-7 {
+  margin-left: 58.331% !important;
+  margin-right: 10px; 
+}
+
+.grid__offset-by-8 {
+  margin-left: 66.664% !important;
+  margin-right: 10px; 
+}
+
+.grid__offset-by-9 {
+  margin-left: 74.997% !important;
+  margin-right: 10px; 
+}
+
+.grid__offset-by-10 {
+  margin-left: 83.33% !important;
+  margin-right: 10px; 
+}
+
+.grid__offset-by-11 {
+  margin-left: 91.663% !important;
+  margin-right: 10px; 
+}
+
 .grid__offset-by-12 {
-  margin-left: 99.996%;
-  margin-right: 10px; }
+  margin-left: 99.996% !important;
+  margin-right: 10px;
+}
 
 .grid__row--border {
   border: 1px solid black; }
@@ -4094,6 +4137,10 @@ input[class^="modal"] {
   background-color: #eee;
   margin: 5px;
   overflow: hidden; }
+
+  .progress--blue {
+    background-color: #0000FF;
+  }
 
 .progress__item--25-prog {
   width: 25%;
