Fixed unsecure http call to font

--- a/assets/css/framework.css
+++ b/assets/css/framework.css
@@ -3,12 +3,12 @@
    License: none (public domain)
 */
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css");
-@import url(base/prism.css);
-@import url(http://fonts.googleapis.com/css?family=PT+Sans);
+/*@import url(base/prism.css);*/
+@import url(https://fonts.googleapis.com/css?family=PT+Sans);
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,300,500,100);
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,300,500,100);
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,300,500,100);
-@import url(http://fonts.googleapis.com/css?family=PT+Sans);
+@import url(https://fonts.googleapis.com/css?family=PT+Sans);
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,300,500,100);
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,300,500,100);
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,300,500,100);
